--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     tr,
     p,
     a {
-      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-family: 'Lato';
       font-size: 16px
     }
     .table-row-space {
@@ -38,23 +38,23 @@
   }
 
     strong {
-      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-family: 'Lato';
       font-size: 16px;
     }
 
     heading {
-      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-family: 'Lato';
       font-size: 27px;
     }
 
     papertitle {
-      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-family: 'Lato';
       font-size: 20px;
       font-weight: bold;
     }
 
     name {
-      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-family: 'Lato';
       font-size: 34px;
       font-weight: bold;
     }
