--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="en">
-<!-- @import url('https://fonts.googleapis.com/css?family=Lato:400,700,40 .0italic,700italic&display=swap'); -->
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,40italic,700italic&display=swap');
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name=viewport content=“width=device-width, initial-scale=1”>
