--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     tr,
     p,
     a {
-      font-family: 'OpenSans';
+      font-family: 'Lato';
       font-size: 16px
     }
     .table-row-space {
@@ -37,23 +37,23 @@
   }
 
     strong {
-      font-family: 'OpenSans';
+      font-family: 'Lato';
       font-size: 16px;
     }
 
     heading {
-      font-family: 'OpenSans';
+      font-family: 'Lato';
       font-size: 27px;
     }
 
     papertitle {
-      font-family: 'OpenSans';
+      font-family: 'Lato';
       font-size: 20px;
 /*       font-weight: bold; */
     }
 
     name {
-      font-family: 'OpenSans';
+      font-family: 'Lato';
       font-size: 34px;
       font-weight: bold;
     }
