--- a/index.html
+++ b/index.html
@@ -23,37 +23,28 @@
       text-decoration: none;
     }
 
-    body,
-    td,
-    th,
-    tr,
-    p,
-    a {
-      font-family: 'Lora';
-      font-size: 16px
-    }
     .table-row-space {
     margin-bottom: 100px; /* Adjust the margin as per your preference */
   }
 
     strong {
-      font-family: 'Lora';
+      font-family: 'Lato';
       font-size: 16px;
     }
 
     heading {
-      font-family: 'Lora';
+      font-family: 'Lato';
       font-size: 27px;
     }
 
     papertitle {
-      font-family: 'Lora';
+      font-family: 'Lato';
       font-size: 20px;
 /*       font-weight: bold; */
     }
 
     name {
-      font-family: 'Lora';
+      font-family: 'Lato';
       font-size: 34px;
       font-weight: bold;
     }
