--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     papertitle {
       font-family: 'Lato';
       font-size: 20px;
-/*       font-weight: bold; */
+      font-weight: bold;
     }
 
     name {
