--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <img id="paper_img" src='images/MAKE.jpg' height="300" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle>QA-RAG: Leveraging Question and Answer-based Retrieved Chunk Re-Formatting for Improving Response Quality During Retrieval-augmented Generation
+        <papertitle> <strong>QA-RAG:</strong> Leveraging Question and Answer-based Retrieved Chunk Re-Formatting for Improving Response Quality During Retrieval-augmented Generation
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
@@ -151,7 +151,7 @@
         <img id="paper_img" src='images/conll.jpg' height="500" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle>LADDER: Latent Attention and Decomposition for Deep Enhanced Retrieval in Medical Question Answering Systems
+        <papertitle><strong>LADDER:</strong>: Latent Attention and Decomposition for Deep Enhanced Retrieval in Medical Question Answering Systems
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
@@ -170,7 +170,7 @@
         <img id="paper_img" src='images/rkb.jpg' height="600" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle>ReMAG-KR: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering
+        <papertitle><strong>ReMAG-KR:</strong>: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
@@ -206,7 +206,7 @@
         <img id="paper_img" src='images/semeval.png' height="250" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle>SCaLAR at SemEval-2024 Task 8: Unmasking the machine: Exploring the power of RoBERTa Ensemble for Detecting Machine Generated Text
+        <papertitle><strong>SCaLAR at SemEval-2024 Task 8:</strong>: Unmasking the machine: Exploring the power of RoBERTa Ensemble for Detecting Machine Generated Text
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
