--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <img id="paper_img" src='images/MAKE.jpg' height="300" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle> <strong>QA-RAG:</strong> Leveraging Question and Answer-based Retrieved Chunk Re-Formatting for Improving Response Quality During Retrieval-augmented Generation
+        <papertitle> <strong style="font-size: larger;">QA-RAG</strong> Leveraging Question and Answer-based Retrieved Chunk Re-Formatting for Improving Response Quality During Retrieval-augmented Generation
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
