--- a/index.html
+++ b/index.html
@@ -101,8 +101,14 @@
                           <!-- News Section -->
                           <div style="margin-top: 40px; margin-left: 30px; max-width: 1000px;">
                             <h3>News</h3>
-                            <p><b>July 2024:</b> Started a new internship at IBM IRL, focusing on developing a retrieval-cum-generation model.</p>
-                            <p><b>June 2024:</b> Published papers in Semeval 2024, ACL SRW 2024, and ICCCNT 2024.</p>
+                            <p><b>[Jul 2024]</b> Two papers under review, one in CoNLL'24 and the other in MAKE Journal.
+                            <p><b>[Jul 2024]</b> Our paper titled "ReMAG-KR:</strong>: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering" got accepted at ACL-SRW'24.</p>
+                            <p><b>[Jun 2024]</b> Our paper titled "NBA MVP Prediction and Historical Analysis using Cross-Era Comparison Approaches" got accepted at ICCCNT'24.</p>
+                            <p><b>[May 2024]</b> Started Summer Research Internship at IBM-IRL, India</p>
+                            <p><b>[Feb 2024]</b> Our Paper titled "SCaLAR at SemEval-2024 Task 8: Unmasking the machine: Exploring the power of RoBERTa Ensemble for Detecting Machine Generated Text" accepted at the SemEval Workshops'24.</p>
+                            <p><b>[Feb 2024]</b> Started Research Internship at HALE Lab, NITK .</p>
+                            <p><b>[Jan 2024]</b> Started Research Internship at AIISC.</p>
+                            <p><b>[Aug 2023]</b> Started Data Science internship at Exela Technologies</p>
                           </div>
 
                       </td>
