--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
                             <p><b>[Jul 2024]</b> Two papers under review, one in CoNLL'24 and the other in MAKE Journal.
                             <p><b>[Jul 2024]</b> Our paper titled "ReMAG-KR:</strong>: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering" got accepted at ACL-SRW'24.</p>
                             <p><b>[Jun 2024]</b> Our paper titled "NBA MVP Prediction and Historical Analysis using Cross-Era Comparison Approaches" got accepted at ICCCNT'24.</p>
-                            <p><b>[May 2024]</b> Started Summer Research Internship at IBM-IRL, India</p>
+                            <p><b>[May 2024]</b> Started Summer Research Internship at IBM-IRL, India.</p>
+                            <p><b>[Mar 2024]</b> Paper under review at SecureComm'24.</p>
                             <p><b>[Feb 2024]</b> Our Paper titled "SCaLAR at SemEval-2024 Task 8: Unmasking the machine: Exploring the power of RoBERTa Ensemble for Detecting Machine Generated Text" accepted at the SemEval Workshops'24.</p>
                             <p><b>[Feb 2024]</b> Started Research Internship at HALE Lab, NITK .</p>
                             <p><b>[Jan 2024]</b> Started Research Internship at AIISC.</p>
-                            <p><b>[Aug 2023]</b> Started Data Science internship at Exela Technologies</p>
+                            <p><b>[Aug 2023]</b> Started Data Science internship at Exela Technologies.</p>
                           </div>
 
                       </td>
@@ -135,7 +136,7 @@
         <img id="paper_img" src='images/MAKE.jpg' height="300" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle> <strong style="font-size: larger;">QA-RAG</strong> Leveraging Question and Answer-based Retrieved Chunk Re-Formatting for Improving Response Quality During Retrieval-augmented Generation
+        <papertitle> QA-RAG: Leveraging Question and Answer-based Retrieved Chunk Re-Formatting for Improving Response Quality During Retrieval-augmented Generation
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
@@ -157,7 +158,7 @@
         <img id="paper_img" src='images/conll.jpg' height="500" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle><strong>LADDER:</strong>: Latent Attention and Decomposition for Deep Enhanced Retrieval in Medical Question Answering Systems
+        <papertitle> LADDER: Latent Attention and Decomposition for Deep Enhanced Retrieval in Medical Question Answering Systems
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
@@ -176,7 +177,7 @@
         <img id="paper_img" src='images/rkb.jpg' height="600" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle><strong>ReMAG-KR:</strong>: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering
+        <papertitle> ReMAG-KR: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
@@ -212,7 +213,7 @@
         <img id="paper_img" src='images/semeval.png' height="250" width="500">
       </td>
       <td width="100%" valign="center">
-        <papertitle><strong>SCaLAR at SemEval-2024 Task 8:</strong>: Unmasking the machine: Exploring the power of RoBERTa Ensemble for Detecting Machine Generated Text
+        <papertitle> SCaLAR at SemEval-2024 Task 8: Unmasking the machine: Exploring the power of RoBERTa Ensemble for Detecting Machine Generated Text
         </papertitle>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Sidhaarth Murali</strong>,
