--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                         <p align="center">
                             <name>Sidhaarth Sredharan Murali</name>
                         </p>
+                        <p align="center">
+                          <img src="https://drive.google.com/file/d/1kbkO3FfPa_VvSaVYNo-X45sogw-byqZ9/view?usp=drive_link" alt="Sidhaarth Sredharan Murali" width="200" height="200">
+                        </p>
                         <p>Hi! I'm a final year B.Tech student at <a href="http://nitk.ac.in/">National Institute of Technology Surathkal</a>, Karnataka, working on my major project under <a href="https://www.linkedin.com/in/dranandkumarm/">Dr. Anand Kumar M</a>.</p>
                         <p>My research interests encompass computational linguistics with a focus on Q&A systems, multilingual processing, and multimodal AI applications, including text-to-image models and visual Q&A. I am particularly passionate about multimodal Q&A systems and optimizing learning from multimodal sources.</p>
                         <p>Research Experience: I have gained valuable research experience as an undergraduate researcher, working under <a href="https://www.linkedin.com/in/bhawana-rudra-25584086/">Dr. Bhawana Rudra</a> on machine learning and quantum machine learning system analyses, and under <a href="https://www.linkedin.com/in/anand-kumar-m-6b53b2104/">Dr.Anand Kumar M</a> on AI text detection and Trojan detection in large language models (LLMs). Additionally, I interned in HALE Lab under <a href="https://www.linkedin.com/in/sowmya-kamath-nitk/">Dr. Sowmya Kamath</a> focusing on biomedical retrieval-augmented generation (RAG)-based question and answer systems.</p>
