--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <name>Sidhaarth Sredharan Murali</name>
                         </p>
                         <p align="center">
-                          <img src="src="/images/pfp.jpeg" alt="Sidhaarth Sredharan Murali" width="200" height="200">
+                          <img src ="/images/pfp.jpeg" alt="Sidhaarth Sredharan Murali" width="200" height="200">
                         </p>
                         <p>Hi! I'm a final year B.Tech student at <a href="http://nitk.ac.in/">National Institute of Technology Surathkal</a>, Karnataka, working on my major project under <a href="https://www.linkedin.com/in/dranandkumarm/">Dr. Anand Kumar M</a>.</p>
                         <p>My research interests encompass computational linguistics with a focus on Q&A systems, multilingual processing, and multimodal AI applications, including text-to-image models and visual Q&A. I am particularly passionate about multimodal Q&A systems and optimizing learning from multimodal sources.</p>
