--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
                         <p align="center">
                             <name>Sidhaarth Sredharan Murali</name>
                         </p>
-                        <p align="center">
-                          <img src ="/images/pfp.jpeg" alt="Sidhaarth Sredharan Murali" width="200" height="200">
-                        </p>
                         <p>Hi! I'm a final year B.Tech student at <a href="http://nitk.ac.in/">National Institute of Technology Surathkal</a>, Karnataka, working on my major project under <a href="https://www.linkedin.com/in/dranandkumarm/">Dr. Anand Kumar M</a>.</p>
                         <p>My research interests encompass computational linguistics with a focus on Q&A systems, multilingual processing, and multimodal AI applications, including text-to-image models and visual Q&A. I am particularly passionate about multimodal Q&A systems and optimizing learning from multimodal sources.</p>
+                        <p align="center">
+                          <img width="100%" src="images/pfp.jpeg"
+                            style="object-fit:cover; width:340px; height:340px; border-radius:50%;">
+                        </p>
                         <p>Research Experience: I have gained valuable research experience as an undergraduate researcher, working under <a href="https://www.linkedin.com/in/bhawana-rudra-25584086/">Dr. Bhawana Rudra</a> on machine learning and quantum machine learning system analyses, and under <a href="https://www.linkedin.com/in/anand-kumar-m-6b53b2104/">Dr.Anand Kumar M</a> on AI text detection and Trojan detection in large language models (LLMs). Additionally, I interned in HALE Lab under <a href="https://www.linkedin.com/in/sowmya-kamath-nitk/">Dr. Sowmya Kamath</a> focusing on biomedical retrieval-augmented generation (RAG)-based question and answer systems.</p>
                         <p>During my internship at Exela Technologies in the Summer of 2023, I developed a PDF chatbot utilizing OpenAI APIs and OCR models for medical bill document summarization. Presently, I am a research intern at IBM IRL, working under the mentorship of <a href="https://www.linkedin.com/in/vishwajeetkumar86/">Vishwajeet Kumar</a>, <a href="https://research.ibm.com/people/rudra-murthy-venkataramana">Rudra Murthy V</a>, and <a href="https://www.linkedin.com/in/jaydeep-sen-14251316/">Jaydeen Sen</a>. Here, I am focusing on the development of a retrieval-cum-generation model designed to excel in both representational and generative tasks.</p>
                         <p>Currently, I have published papers in Semeval 2024, ACL SRW 2024, ICCCNT 2024, and have papers under review in SecureComm 2024 and CoNLL 2024.</p>
