--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                             <name>Sidhaarth Sredharan Murali</name>
                         </p>
                         <p>Hi! I'm a final year B.Tech student at <a href="http://nitk.ac.in/">National Institute of Technology Surathkal</a>, Karnataka, working on my major project under <a href="https://www.linkedin.com/in/dranandkumarm/">Dr. Anand Kumar M</a>.</p>
-                        <p>My research interests encompass computational linguistics with a focus on Q&A systems, multilingual processing, and multimodal AI applications, including text-to-image models and visual Q&A. I am particularly passionate about multimodal Q&A systems and optimizing learning from multimodal sources.</p>
+                        <p>My research interests lie in computational linguistics, with a focus on question-answering systems, multilingual processing, and multimodal AI applications such as visual Q&A etc. I am especially passionate about developing multimodal Q&A systems, optimizing large language model training through techniques like model merging, and addressing bias mitigation and reasoning from both single and multimodal sources.</p>
                         <p align="center">
                           <img width="100%" src="images/pfp.jpeg"
                             style="object-fit:cover; width:340px; height:340px; border-radius:50%;">
                         </p>
                         <p>Research Experience: I have gained valuable research experience as an undergraduate researcher, working under <a href="https://www.linkedin.com/in/bhawana-rudra-25584086/">Dr. Bhawana Rudra</a> on machine learning and quantum machine learning system analyses, and under <a href="https://www.linkedin.com/in/anand-kumar-m-6b53b2104/">Dr.Anand Kumar M</a> on AI text detection and Trojan detection in large language models (LLMs). Additionally, I interned in HALE Lab under <a href="https://www.linkedin.com/in/sowmya-kamath-nitk/">Dr. Sowmya Kamath</a> focusing on biomedical retrieval-augmented generation (RAG)-based question and answer systems.</p>
-                        <p>During my internship at Exela Technologies in the Summer of 2023, I developed a PDF chatbot utilizing OpenAI APIs and OCR models for medical bill document summarization. Presently, I am a research intern at IBM IRL, working under the mentorship of <a href="https://www.linkedin.com/in/vishwajeetkumar86/">Vishwajeet Kumar</a>, <a href="https://research.ibm.com/people/rudra-murthy-venkataramana">Rudra Murthy V</a>, and <a href="https://www.linkedin.com/in/jaydeep-sen-14251316/">Jaydeen Sen</a>. Here, I am focusing on the development of a retrieval-cum-generation model designed to excel in both representational and generative tasks.</p>
-                        <p>Currently, I have published papers in Semeval 2024, ACL SRW 2024, ICCCNT 2024, and have papers under review in SecureComm 2024 and CoNLL 2024.</p>
+                        <p>During my internship at Exela Technologies in the Summer of 2023, I developed a PDF chatbot utilizing OpenAI APIs and OCR models for medical bill document summarization. Over the summer of 2024,  I interned at IBM Research, india as a researcher, working under the mentorship of <a href="https://www.linkedin.com/in/vishwajeetkumar86/">Vishwajeet Kumar</a>, <a href="https://research.ibm.com/people/rudra-murthy-venkataramana">Rudra Murthy V</a>, and <a href="https://www.linkedin.com/in/jaydeep-sen-14251316/">Jaydeen Sen</a>. Here, I focused on the development of a retrieval-cum-generation model designed to excel in both representational and generative tasks. Currently I am working under the mentorship of <a href="https://www.linkedin.com/in/jaydeep-sen-14251316/">Dr. Dinesh Manocha</a>, at the University of Maryland on a project that focuses on synthetic data generation and model betterment for different modalities.</p>
+                        <p>Currently, I have published papers in Semeval 2024, ACL SRW 2024, ICCCNT 2024, and have papers under review in SecureComm 2024, COLING 2024, CODS-COMAD 2024, and MAKE 2024.</p>
                         <p align="center">
                             <a href="mailto:sidsredhar27@gmail.com">Email</a>&nbsp|&nbsp
                             <a href="https://drive.google.com/file/d/1HrKOGMPFRFpreRhY_EKYQyocjF6Lm57w/view?usp=drive_link">CV</a>&nbsp|&nbsp
@@ -105,7 +105,7 @@
                           <!-- News Section -->
                           <div style="margin-top: 40px; margin-left: 30px; max-width: 1000px;">
                             <h3>News</h3>
-                            <p><b>[Jul 2024]</b> Two papers under review, one in CoNLL'24 and the other in MAKE Journal.
+                            <p><b>[Jul 2024]</b> Three papers under review, two in COLING'24 and the third in MAKE Journal.
                             <p><b>[Jul 2024]</b> Our paper titled "ReMAG-KR:</strong>: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering" got accepted at ACL-SRW'24.</p>
                             <p><b>[Jun 2024]</b> Our paper titled "NBA MVP Prediction and Historical Analysis using Cross-Era Comparison Approaches" got accepted at ICCCNT'24.</p>
                             <p><b>[May 2024]</b> Started Summer Research Internship at IBM-IRL, India.</p>
@@ -134,7 +134,21 @@
   <br /><br />
   <table id="publications" width="50%" align="center" border="0" border-spacing="0" border-collapse="separate"
     cellspacing="0" cellpadding="13">
-
+    <tr>
+      <td width="70%" valign="center">
+        <img id="paper_img" src='images/self-percept.jpg' height="300" width="500">
+      </td>
+      <td width="100%" valign="center">
+        <papertitle>SELF-PERCEPT: Introspection Improves Large Language Models’ Detection of Multi-Person Mental Manipulation in Conversations
+        </papertitle>
+        <div style="height:10px;font-size:1px;">&nbsp;</div>
+        <strong>Aditya Guru</strong>, <c>Siddharth Shukla</c>, <c>Tanuj Tyagi</c>, <strong>Sidhaarth Murali</strong>, <c>Danush Khanna</c>, <c>Pratinev Seth</c>, <c>Kripa Ghosh</c>
+        <br>
+        <strong>Under review in COLING'25</strong>
+        <div style="height:10px;font-size:1px;">&nbsp;</div>
+<!--         <a href="link_to_paper_pdf">Paper</a> -->
+      </td>
+    </tr>
     <tr>
       <td width="70%" valign="center">
         <img id="paper_img" src='images/MAKE.jpg' height="300" width="500">
@@ -170,7 +184,7 @@
         <c>Supreetha R</c>
 
         <br>
-        <strong>Under review in CoNLL 2024</strong>
+        <strong>Under review in COLING 2024</strong>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <a href="link_to_paper_pdf">Paper</a>
       </td>
