--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                           <!-- News Section -->
                           <div style="margin-top: 40px; margin-left: 30px; max-width: 1000px;">
                             <h3>News</h3>
-                            <p><b>[Jul 2024]</b> Three papers under review, two in COLING'24 and the third in MAKE Journal.
+                            <p><b>[Sept 2024]</b> Three papers under review, two in COLING'24 and the third in MAKE Journal.
                             <p><b>[Jul 2024]</b> Our paper titled "ReMAG-KR:</strong>: Retrieval and Medically Assisted Generation with Knowledge Reduction for Medical Question Answering" got accepted at ACL-SRW'24.</p>
                             <p><b>[Jun 2024]</b> Our paper titled "NBA MVP Prediction and Historical Analysis using Cross-Era Comparison Approaches" got accepted at ICCCNT'24.</p>
                             <p><b>[May 2024]</b> Started Summer Research Internship at IBM-IRL, India.</p>
@@ -136,7 +136,7 @@
     cellspacing="0" cellpadding="13">
     <tr>
       <td width="70%" valign="center">
-        <img id="paper_img" src='images/self-percept.jpg' height="300" width="500">
+        <img id="paper_img" src='images/Manipulation Techniques.pdf' height="300" width="500">
       </td>
       <td width="100%" valign="center">
         <papertitle>SELF-PERCEPT: Introspection Improves Large Language Models’ Detection of Multi-Person Mental Manipulation in Conversations
