--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     cellspacing="0" cellpadding="13">
     <tr>
       <td width="70%" valign="center">
-        <img id="paper_img" src='images/Manipulation Techniques.pdf' height="300" width="500">
+        <img id="paper_img" src='images/manip.png' height="300" width="500">
       </td>
       <td width="100%" valign="center">
         <papertitle>SELF-PERCEPT: Introspection Improves Large Language Models’ Detection of Multi-Person Mental Manipulation in Conversations
