--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div style="height:10px;font-size:1px;">&nbsp;</div>
         <strong>Aditya Guru</strong>, <c>Siddharth Shukla</c>, <c>Tanuj Tyagi</c>, <strong>Sidhaarth Murali</strong>, <c>Danush Khanna</c>, <c>Pratinev Seth</c>, <c>Kripa Ghosh</c>
         <br>
-        <strong>Under review in COLING'25</strong>
+        <strong>Under review in COLING 2024</strong>
         <div style="height:10px;font-size:1px;">&nbsp;</div>
 <!--         <a href="link_to_paper_pdf">Paper</a> -->
       </td>
